--- a/eks-cluster/statefulset/secrets.yaml
+++ b/eks-cluster/statefulset/secrets.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysql-secret
+  name: my-ctm-secret
 type: kubernetes.io/basic-auth
 stringData:
-  username: bW9sYWR1Z2I=
-  password: QmV2ZXJsZXloaWxsczkwMjEwLi4u
+  username: ""
+  password: ""
